--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ main{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-row-gap: 30px;
+    margin-bottom: 40px;
 }
 .collection{
     width: 329px;
@@ -102,10 +103,52 @@ main{
     margin-bottom: 10px;
     
 }
+.container>.see-more-link{
+    color:#E02C6D;
+    
+}
+.container a{
+    color: #E02C6D;
+    text-decoration: none;
+    margin:40px 10px 20px 85%;
+    padding:40px 0;
+}
 
 
+/*-----------Footer section styles start from here -------*/
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0A0826;
+    color:white;
+    height: 240px;
+    
+}
 
-
+.footer-section h5{
+    text-align: center;
+    font-size: 24px;
+    text-align: centere;
+    font-weight: bold;
+    margin-bottom: 4px;
+    margin-top: 0;
+}
+.footer-para-1{
+    font-size: 14px;
+    margin-top: 0;
+    margin-bottom: 3px;
+}
+.footer-para-2{
+    font-size: 14px;
+    text-align: center;
+    margin-top: 0px;
+}
+.social-link-icon{
+    display: flex;
+    justify-content: space-around;
+    font-size: 18px;
+}
 
 
 
@@ -133,6 +176,14 @@ main{
     .collections{
         grid-template-columns: repeat(1,1fr);
         margin-left: 25px;
+    }
+    .container>.see-more-link{
+        margin-right: 10px;
+        
+    }
+    .container a{
+        padding-left: 0px;
+        
     }
 }
 
