--- a/style.css
+++ b/style.css
@@ -103,16 +103,9 @@ main{
     margin-bottom: 10px;
     
 }
-.container>.see-more-link{
-    color:#E02C6D;
-    
-}
-.container a{
-    color: #E02C6D;
-    text-decoration: none;
-    margin:40px 10px 20px 85%;
-    padding:40px 0;
-}
+
+   
+
 
 
 /*----------------------Top Trending styles-----*/
@@ -125,6 +118,20 @@ main{
     padding-left: 104px;
 }
 
+#top-trend-button{
+    /* display: inline-block; */
+     font-size: 16px;
+    /* background-color: #E02C6D; */
+    padding:10px 50px;
+    color: white;
+    background-color: orange;
+    width: 20%;
+    border-radius: 25px; 
+}
+#top-trend-button a{
+    color: white;
+    text-decoration: none;
+}
 .top-trend-half-width>img{
     width: 70%;
     padding-left: 70px;
@@ -197,13 +204,15 @@ footer{
         grid-template-columns: repeat(1,1fr);
         margin-left: 25px;
     }
-    .container>.see-more-link{
-        margin-right: 10px;
-        
+    
+
+    .top-trend-container{
+        flex-direction: column;
     }
-    .container a{
-        padding-left: 0px;
-        
+    .top-trend-half-width>img{
+        width: 100%;
+        padding-top: 40px;
+        padding-left: 10px;
     }
 }
 
@@ -227,5 +236,9 @@ footer{
         
     }
 
-
+    .top-trend-half-width>img{
+        width: 100%;
+        padding-top: 100px;
+        padding-left: 0px;
+    }
 }
